# InfraBench

./: .gitignore  README.md
docs/: codex_review_infrabench.md  infra-bench-develop-plan.md  infra-bench-job-results-heatmap.csv  infra-bench-task-survey.html  infra-bench-test-plan.md  infra-bench-test-results.md  infra_bench_task.md  infrabench-category-resolution-rate.md  infrabench-full-sweep-summary.md
infra-bench/: README.md  analyze.sh  dataset.toml  run.sh  run_claude_code.sh  run_codex.sh  run_open_code.sh
infra-bench/agents/: amd_codex.py
infra-bench/jobs/claude-haiku-4.5/: config.json  lock.json  merge_manifest.json  result.json
infra-bench/jobs/claude-opus-4.6/: config.json  lock.json  merge_manifest.json  result.json
infra-bench/jobs/claude-opus-4.8/: config.json  lock.json  result.json
infra-bench/jobs/claude-sonnet-5/: config.json  lock.json  result.json
infra-bench/jobs/codex-gpt-5.5/: config.json  lock.json  result.json
infra-bench/jobs/codex-gpt-5.6-luna/: config.json  lock.json  result.json
infra-bench/jobs/codex-gpt-5.6-sol/: config.json  lock.json  result.json
infra-bench/jobs/codex-gpt-5.6-terra/: config.json  lock.json  result.json
infra-bench/jobs/opencode-deepseek-v4-flash/: config.json  lock.json  result.json
infra-bench/jobs/opencode-gemini-3.5-flash/: config.json  lock.json  result.json
infra-bench/tasks/llvm-simple-constant-propagation/environment/: CMakeLists.txt  Dockerfile  main.cpp
infra-bench/tasks/llvm-simple-constant-propagation/environment/your_turn/: populate_function.cpp
(+4845 files in other folders)
